crates/context-macro/tests/constraints/seeds_keys.fail.stderr
error: `seeds` or `seeded` are already defined.
  --> tests/constraints/seeds_keys.fail.rs:27:9
   |
27 |     pub counter: Mut<Account<Counter>>,
   |         ^^^^^^^
